--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-1. Entdeckungsseite entwickeln
-2. "Im bau" Seite für Unterstützungsseite
-3. Sehen, ob die Profilfunktion entwickelt werden kann.
+o Entdeckungsseite entwickeln
+o Sehen, ob die Profilfunktion entwickelt werden kann. (Vielleicht auch eine laufendes Login/Register?)
+o Unterstützungssesite entwickeln. Sollte eine einfache seite sein
